--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -6,6 +6,10 @@ header {
     position: fixed;
 }
 
+header .page-container {
+    display: flex;
+}
+
 header div {
     justify-content: space-between;
     width: 85%;
@@ -13,7 +17,7 @@ header div {
 }
 
 header div nav {
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     font-weight: 300;
     padding: 10px 0 10px 0;
     width: 80vw;
