--- a/src/pages/LandingPage/styles.css
+++ b/src/pages/LandingPage/styles.css
@@ -1,28 +1,44 @@
-#landing-page {
-    background-color: var(--color-primary-dark);
-    color: var(--color-primary-light);
-    height: 100vh;
-}
-
-#landing-page .page-container {
-    display: flex;
-    flex-direction: column;
-}
-
-#landing-page .page-container h1 {
-    font-size: 3.5rem;
-    margin-bottom: 5px;
-    margin-top: 20vh;
-}
-
-#landing-page .page-container h3 {
-    font-size: 2.1rem;
-    font-weight: 400;
-}
-
-.down-icon-container {
-    margin-top: 50vh;
-    display: flex;
-    justify-content: center;
-    /* border: solid 1px #ccc; */
-}
+        #landing-page {
+            background-color: var(--color-primary-dark);
+            color: var(--color-primary-light);
+            height: 100vh;
+        }
+        
+        .logo a {
+            color: var(--color-primary-light);
+            font-weight: 800;
+            text-align: center;
+            font-size: larger;
+        }
+        
+        #landing-page .page-container {
+            display: flex;
+            flex-direction: column;
+        }
+        
+        #landing-page .page-container p {
+            color: var(--color-primary-light);
+        }
+        
+        #landing-page .page-container h1 {
+            font-size: 3rem;
+            font-weight: 400;
+            margin-top: 30vh;
+        }
+        
+        #landing-page .page-container p {
+            font-size: 1.5rem;
+            font-weight: 100;
+        }
+        
+        #landing-page .page-container .down-icon-container {
+            display: flex;
+            align-items: flex-end;
+            justify-content: center;
+            height: 100%;
+        }
+        
+        #landing-page .page-container a {
+            width: fit-content;
+            margin-bottom: 4vh;
+        }
