--- a/src/pages/About/styles.css
+++ b/src/pages/About/styles.css
@@ -1,5 +1,5 @@
 #about .page-container {
-    margin-top: 10px;
+    /* margin-top: 50px; */
     display: flex;
     flex-direction: column;
     height: 90vh;
@@ -24,7 +24,7 @@
     /* border: solid 1px #000; */
 }
 
-.img img {
+.img {
     margin-top: 10px;
     border: solid 1px #ccc;
     width: 100%;
