--- a/src/pages/Skills/styles.css
+++ b/src/pages/Skills/styles.css
@@ -6,7 +6,7 @@
 .technologies-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .panel {
@@ -19,6 +19,7 @@
     border-radius: 10px;
     border-radius: 10px;
     display: flex;
+    background-color: #cccccc1c;
 }
 
 .panel> :nth-child(n + 1) {
@@ -26,28 +27,31 @@
 }
 
 .skills-container ul {
-    display: flex;
     flex-wrap: wrap;
     flex: 1;
     justify-content: space-evenly;
 }
 
 .skills-container ul>li {
-    /* box-shadow: var(--color-dark-box-shawdow) 5px 5px 15px; */
-    border-bottom: solid 1px #ccc;
     font-weight: 800;
     padding: 15px 15px 5px 15px;
     margin: 10px 10px 0 10px;
     list-style-type: none;
 }
 
+.skills-container ul>li>p {
+    border-bottom: solid 1px #ccc;
+}
+
+.technologies-container>li {
+    display: flex;
+    justify-content: center;
+    border-right: 1;
+}
+
 .technologies-container figure {
     max-width: max-content;
-    margin-right: 40px;
-    /* margin-top: 40px; */
-    padding: 10px;
-    border: solid 1px rgba(0, 0, 0, 0.425);
-    flex: 1;
+    padding: 15px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -56,9 +60,5 @@
 }
 
 .technologies-container figure img {
-    margin-bottom: 5px;
-}
-
-.technologies-container figure figcaption {
-    margin-top: 5px
+    margin-bottom: 10px;
 }
