--- a/src/pages/Skills/styles.css
+++ b/src/pages/Skills/styles.css
@@ -8,21 +8,36 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin: 25px 0 35px 0;
+    background-color: #cccccc1c;
+    /* border: solid 1px #3dc513; */
+    /* background-color: #3dc513; */
 }
 
-.panel {
+
+/* .panel {
+    padding: 35px;
+    border: solid 1px var(--color-dark-border);
+    border-radius: 10px;
+    box-shadow: var(--color-dark-box-shawdow) 5px 5px 15px;
+    display: flex;
+} */
+
+
+/* .panel {
     margin: 25px 0 35px 0;
     padding: 35px;
-    max-width: none;
     border: solid 1px var(--color-dark-border);
     border-radius: 10px;
     box-shadow: var(--color-dark-box-shawdow) 5px 5px 15px;
     border-radius: 10px;
-    border-radius: 10px;
     display: flex;
     background-color: #cccccc1c;
-    /* border: solid #ce1c1c; */
+    /* border: solid #ce1c1c; *
+
+
 }
+*/
 
 .panel> :nth-child(n + 1) {
     max-width: fit-content;
@@ -32,6 +47,7 @@
     flex-wrap: wrap;
     flex: 1;
     justify-content: space-evenly;
+    background-color: #cccccc1c;
 }
 
 .skills-container ul>li {
