--- a/src/pages/Portfolio/styles.css
+++ b/src/pages/Portfolio/styles.css
@@ -1,6 +1,7 @@
 #portfolio {
     background-color: var(--color-primary-dark);
-    height: 100vh;
+    min-height: 100vh;
+    max-height: fit-content;
     color: var(--color-primary-light);
 }
 
@@ -9,16 +10,24 @@
 }
 
 .projects-container {
+    display: flex;
     flex-wrap: wrap;
     justify-content: center;
     color: var(--color-primary-light);
+    margin-bottom: 35px;
 }
 
 .item-project {
-    width: fit-content;
-    border: solid 1px #ccc;
+    background-color: var(--color-background-dark-item);
+    max-width: fit-content;
+    height: 300px;
+    /* border: solid 1px #ccc !important; */
     padding: 55px;
     /* padding: 15px 15px 5px 15px; */
-    margin: 15px 15px 15px 15px;
+    margin: 15px 15px 15px 15px !important;
     border-radius: 10px;
+}
+
+.item-project:hover {
+    box-shadow: var(--color-dark-box-shawdow) 15px 15px 25px
 }
