--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -14,7 +14,7 @@ footer .page-container>nav {
 }
 
 footer .page-container {
-    margin: 1%;
+    /* margin: 1%; */
     display: flex;
     justify-content: space-between;
     color: var(--color-primary-light);
