--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,29 +1,37 @@
 header {
+    width: 100vw;
+    display: flex;
     background-color: var(--color-background-header-tranparent);
     color: var(--color-primary-light);
     justify-content: center;
+    align-items: center;
     top: 0 !important;
     position: fixed;
+    /* border: solid 1px rgba(8, 29, 221, 0.8); */
 }
 
 header .page-container {
     display: flex;
 }
 
-header div {
+header>div {
     justify-content: space-between;
-    width: 85%;
     align-items: center;
+    /* border: solid 1px #cccc; */
 }
 
-header div nav {
+header nav {
+    display: flex;
     font-size: 1.4rem;
     font-weight: 300;
     padding: 10px 0 10px 0;
-    width: 80vw;
-    justify-content: space-between;
+    /* border: solid 1px rgba(165, 60, 60, 0.8); */
 }
 
-header div nav a {
-    padding: 5px;
+header div nav>a {
+    padding: 5px 0px 5px 8px;
+}
+
+header div nav>a:first-child {
+    padding-left: 0;
 }
