--- a/src/pages/Portfolio/styles.css
+++ b/src/pages/Portfolio/styles.css
@@ -9,25 +9,51 @@
     color: var(--color-primary-light);
 }
 
+.projects-container,
+.pagination-container {
+    box-shadow: inset 0px 0px 3px var(--color-dark-border) !important;
+    border-radius: 5px !important;
+}
+
 .projects-container {
+    max-width: 100%;
+    padding: 25px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    flex: 1;
     color: var(--color-primary-light);
-    margin-bottom: 35px;
+    margin-bottom: 5px;
 }
 
 .item-project {
     background-color: var(--color-background-dark-item);
     max-width: fit-content;
     height: 300px;
-    /* border: solid 1px #ccc !important; */
-    padding: 55px;
-    /* padding: 15px 15px 5px 15px; */
-    margin: 15px 15px 15px 15px !important;
+    border: solid 1px rgba(204, 204, 204, 0.082) !important;
+    margin: 0 15px 15px 15px !important;
     border-radius: 10px;
 }
 
 .item-project:hover {
-    box-shadow: var(--color-dark-box-shawdow) 15px 15px 25px
+    box-shadow: var(--color-dark-box-shawdow) 15px 15px 25px;
+}
+
+.pagination-container {
+    /* margin-bottom: 35px; */
+    border-radius: 5px !important;
+    display: flex;
+    justify-content: center;
+}
+
+.pagination {
+    width: 8vw;
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
+}
+
+.pagination span {
+    color: var(--color-primary-light);
+    font-weight: 200;
+    font-size: 1.3rem;
 }
