--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -51,6 +51,7 @@ body,
 
 .space-top {
     padding: 16px 0 16px 0;
+    box-shadow: var(--color-dark-box-shawdow) 5px 5px 25px;
 }
 
 .page-container {
@@ -65,7 +66,8 @@ body,
 }
 
 :target {
-    scroll-margin-top: 1.9em;
+    /* scroll-margin-top: 3.5em; */
+    scroll-margin-top: 2.9em;
 }
 
 .panel {
