--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,4 +1,6 @@
 header {
+    /* box-shadow: var(--color-dark-box-shawdow) 5px 5px 25px; */
+    height: 75px;
     width: 100vw;
     display: flex;
     background-color: var(--color-background-header-tranparent);
@@ -22,16 +24,14 @@ header>div {
 
 header nav {
     display: flex;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     font-weight: 300;
     padding: 10px 0 10px 0;
     /* border: solid 1px rgba(165, 60, 60, 0.8); */
 }
 
 header div nav>a {
-    padding: 5px 0px 5px 8px;
-}
-
-header div nav>a:first-child {
-    padding-left: 0;
+    margin-left: 35px;
+    /* padding: 5px 0px 5px 8px; */
+    /* border: solid 1px rgba(165, 60, 60, 0.8); */
 }
