--- a/src/pages/LandingPage/styles.css
+++ b/src/pages/LandingPage/styles.css
@@ -2,6 +2,7 @@
             background-color: var(--color-primary-dark);
             color: var(--color-primary-light);
             height: 100vh;
+            box-shadow: var(--color-dark-box-shawdow) 5px 5px 25px;
         }
         
         .logo a {
