--- a/src/pages/Contact/styles.css
+++ b/src/pages/Contact/styles.css
@@ -6,27 +6,21 @@
     height: 70%;
     display: flex;
     flex-wrap: wrap;
-    /* flex-direction: column; */
+    flex: 1;
     justify-content: space-between;
-    /* background-color: aqua; */
-    /* border: solid 1px #000; */
 }
 
 .icon-contact {
-    /* border: solid 1px #000; */
     width: 45px;
     height: 45px;
-    /* background-color: blue; */
 }
 
 .contact a {
     color: var(--color-primary-dark);
-    /* border: solid 1px #000; */
     display: flex;
     width: 35vw;
     align-items: center;
     text-align: left;
-    /* margin-bottom: 45px; */
 }
 
 .contact p {
@@ -36,8 +30,4 @@
 
 .contact p:hover {
     color: #212428;
-}
-
-.instagram {
-    display: flex;
 }
