--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -61,13 +61,16 @@ body,
 
 .page-container {
     width: 80%;
-    /* border: solid 1px #93a819; */
+    /* border: solid 3px #93a819; */
 }
 
 .title-page {
     margin-bottom: 26px;
     font-size: 3.5rem;
     color: var(--color-primary-dark);
+    padding: 0;
+    /* border: solid 1px rgb(250, 250, 250); */
+    text-align: start;
 }
 
 :target {
@@ -78,10 +81,12 @@ body,
 .panel {
     box-shadow: var(--color-dark-box-shawdow) 5px 5px 25px;
     border: solid 1px var(--color-dark-border);
+    /* border: solid 1px red; */
     border-radius: 10px;
     padding: 35px;
     display: flex;
     margin: 25px 0 35px 0;
+    width: inherit 95%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
