--- a/src/pages/Studies/styles.css
+++ b/src/pages/Studies/styles.css
@@ -23,6 +23,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    /* border: solid 1px rgb(15, 104, 145); */
 }
 
 .coursers-icons-container a {
@@ -48,4 +49,8 @@
     color: var(--color-primary-light);
     padding: 5px;
     margin-left: 11px;
+}
+
+.informations {
+    /* border: solid 1px rgb(15, 145, 21); */
 }
